lab1/Test/L1-A-11-79.cmm
struct OwRLITu4HO6I5 {
};
int MI0nM1tXrkYE9lu ( int sxHM4 ) {
  dFxlYhfF8DH2X == ;
}
struct {
}tA , sml12QCLcYu0ouXvj 

;
struct edH ZqaNEfXmPK9yhJ4l8 ( ) {
  int fD8iQll ;
  float fW9v = L9oK9SzHfCBiSPfX || mCzk4Gxt >= - SemrP4elG9JI7R2p 
    ( O485MxsyJdEu = c6bXoRGtWPYluomLhzW = ChFqroIGFu0n_UatZVWu 
    && GuVh7vIU0TGxdJ7wq_DC > zc15lK + HpciVH8Tkde * KfSOz79xZvaHVl 
    [ O || AzaWojaq - LPd_Q4V / ( _Y3T || tYj6Jp != oW 
    - hfgkiMEb5gCF2L013Rt * CSHyOpVV3FwATGZ [ C && <= 
    AiVyubsopKCOTTGqPtAq - rWkvAWk1 ( g4_uihBRCU , M9BD2zI8X1D51r 
    , jwJHAq751HmpxdoooY44 , yV0I5TZxXbHONCv_ || mDNB 
    == L ) ] < ! jwY ) - 2073603075 ] * U3Sk181k6 ( ) 
    / ! 2027519362.474401317 ) . pGEmqxFXO8 , XE1Px1h_kXR1BkqX3vG 
    [ 1207214549 ] ;
}
int pGHwN int pFjb9DtZU__qHAD , int WlDdDtt8KoU1pwJjG 
  ) {
}
int P_dtJh_qYnHibiX2K ( ) {
  ;
  kGLOln ;
  if Ub3m2qyn )   IgAeo70FOjj4yZ ;
else   if ( se2EU8PsgxLkk )   if ( Lv1HvQ ) {
    if ( cx )     TjLnkV_V ;
else     if ( rig )     if bPholZt3Meczxta )     if 
      ( Czctie87aht7YATxP )     while ( V1Tt03zi9t_4 ) float 
          _BqlUqHausfb7AM ;





  }else   return en ;



}
int 